All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-05-10 ruhllatio
	Fix: Category Parent->Child name return function after Misc move
	Fix: WEB-DL shows as option in My TV shows when not used as a category #2110
2016-05-10 DariusIII
	Fix: Prevent deadlocks on binaries and releases update (fix @ruhllatio).
	Upd: Add couchpotato icon to Gamma theme. Fix issue #2115
2016-05-09 DariusIII
	Fix: Partitioning in patch 0436.
	Chg: Replace requestid_threaded.py with requestid.php in ProcessReleases class.
2016-05-08 niel
	Mrg: Changing table 'category' to 'categories' along with references to categoryid => categories_id.
		**NOTE** This involves changes to your releases table. It will take some time,
		potentially a very long time, depending on the number of releases you have.
2016-05-07 niel
	Chg: alter subsection,name fields to settings for recaptcha.
	Mrg: PR 2135, from zetas - Fix Recaptcha settings.
	Fix: Reference to configuration file/location for IRC Scraper in tmux-edit.tpl.
2016-05-06 DariusIII
	Fix: Missing use statement for Category class in admin pages.
2016-05-06 bart39
	Fix: TV categorization mismatches.
		** NOTE *** - you will need to do the following to fix the categorization:
		`php /var/www/nZEDb/misc/testing/Release/recategorize.php all`
		this will take a while to complete.
2016-05-06 DariusIII
	Upd: Comment out max_matches(deprecated since sphinx 2.2.3) and change sphinx.pid location to proper /var/run/sphinxsearch/searchd.pid
2016-05-05 niel
	Mrg: PR 2121, from meganomic - Yahoo search fix.
2016-05-05 bart39
	Fix: update collection regex in a.b.mom
	Fix: Missing escape on release triggers.
2016-05-03 niel
	Fix: Force li3 connections to ignore Host/Port settings if a socket is provided.
	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).